update About page

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 							<ul class="nav-dropdown">
 								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
 								<li><a href="about.html">Tentang Kami</a></li> 
-								<li><a href="volunteer.html">Relawan</a></li>
+								<!--<li><a href="volunteer.html">Relawan</a></li>-->
 								<!-- <li><a href="faq.html">FAQ</a></li> -->
 								<!-- <li><a href="causes.html">Visi</a></li> -->
 								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
@@ -119,9 +119,9 @@
 		<div class="row">
 			<div class="col-lg-8 content-center">
 				<div class="xs-video-popup-wraper">
-					<img src="assets/images/video_img.jpg" alt="">
+						<img src="assets/images/kopasude_profile_image.png" alt="">
 					<div class="xs-video-popup-content">
-						<a href="https://www.youtube.com/watch?v=Tb1HsAGy-ls" class="xs-video-popup xs-round-btn">
+						<a href="assets/videos/kopasude_profile.mp4" class="xs-video-popup xs-round-btn">
 							<i class="fa fa-play"></i>
 						</a>
 					</div><!-- .xs-video-popup-content end -->
@@ -163,9 +163,9 @@
 				<div class="xs-about-feature">
 					<h3>Kinerja Kopasude</h3>
 					<ul class="xs-unorder-list play green-icon">
-						<li>Sosialisasi, Pelestarian, dan Penerapan Peduli Lingkungan alam DAS Deli</li>
-						<li>Pengajaran, Pendampingan, dan Pembinaan (Anak dan Masyarakat)</li>
-						<li>Pengembangan Usaha Berbasis Ekonomi Kreatif Masyarakat</li>
+						<li>Sosialisasi, Pelestarian, dan Penerapan Peduli Lingkungan alam DAS Deli.</li>
+						<li>Pengajaran, Pendampingan, dan Pembinaan (Anak dan Masyarakat).</li>
+						<li>Pengembangan Usaha Berbasis Ekonomi Kreatif Masyarakat.</li>
 					</ul>
 				</div>
 			</div>
@@ -208,74 +208,6 @@
 	</div><!-- .container end -->
 	<div class="xs-black-overlay"></div>
 </div>	<!-- End funfacts section -->
-	<!-- team section -->
-	<section class="xs-section-padding bg-gray">
-	<div class="container">
-		<div class="xs-heading row xs-mb-60">
-			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Pengurus</h2>
-				<span class="xs-separetor dashed"></span>
-				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
-			</div><!-- .xs-heading-title END -->
-		</div><!-- .row end -->
-		<div class="row xs-mb-60">
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_1.png" alt="">
-					<div class="xs-team-content">
-						<h4>William Khanna</h4>
-						<small>CEO & Founder</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-red" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_2.png" alt="">
-					<div class="xs-team-content">
-						<h4>Mr. Aladin</h4>
-						<small>General Manager</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-purple" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_3.png" alt="">
-					<div class="xs-team-content">
-						<h4>Zummon Khan</h4>
-						<small>Volunteer</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-blue" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_4.png" alt="">
-					<div class="xs-team-content">
-						<h4>Harista Pro</h4>
-						<small>Volunteer</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-orange" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-		</div><!-- .row END -->
-		<!-- <div class="text-center">
-				<a href="#" class="btn btn-success">
-					Bergabung bersama kami
-				</a>
-			</div>
-		-->
-	</div><!-- .container end -->
-</section>	<!-- End team section -->
 
 </main>
 
