--- a/become-volunteer-en.html
+++ b/become-volunteer-en.html
@@ -71,7 +71,7 @@
 								<ul class="nav-dropdown">
 									 <!-- <li><a href="donate-now.html">donate now</a></li> -->
 									<li><a href="about-en.html">About Us</a></li> 
-									<li><a href="volunteer-en.html">Volunteer</a></li>
+									<!--<li><a href="volunteer-en.html">Volunteer</a></li> -->
 									<!-- <li><a href="faq.html">FAQ</a></li> -->
 									<!-- <li><a href="causes.html">Visi</a></li> -->
 									<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
@@ -127,7 +127,7 @@
 				<div class="xs-donation-form-wraper" >
 					<div class="xs-heading xs-mb-30">
 						<h2 class="xs-title">How to become a Volunteer at Kopasude?</h2>
-						<p class="small">To learn more about make donate charity with us visit our "<span class="color-green">Contact us</span>" site. By calling <span class="color-green">+44(0) 800 883 8450</span>.</p>
+						<p class="small">To become a volunteer at Kopasude visit our "<span class="color-green">Contact us</span>" site.</p>
 						<span class="xs-separetor v2"></span>
 					</div><!-- .xs-heading end -->
 					<a href="contact-en.html" class="btn btn-warning"><span class="badge"><i class="fa fa-heart"></i></span> Contact Us</a>
