--- a/become-volunteer.html
+++ b/become-volunteer.html
@@ -71,7 +71,7 @@
 								<ul class="nav-dropdown">
 									 <!-- <li><a href="donate-now.html">donate now</a></li> -->
 									<li><a href="about.html">Tentang Kami</a></li> 
-									<li><a href="volunteer.html">Relawan</a></li>
+									<!--<li><a href="volunteer.html">Relawan</a></li>-->
 									<!-- <li><a href="faq.html">FAQ</a></li> -->
 									<!-- <li><a href="causes.html">Visi</a></li> -->
 									<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
