--- a/about-en.html
+++ b/about-en.html
@@ -71,7 +71,7 @@
 							<ul class="nav-dropdown">
 								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
 								<li><a href="about-en.html">About Us</a></li> 
-								<li><a href="volunteer-en.html">Volunteer</a></li>
+								<!--<li><a href="volunteer-en.html">Volunteer</a></li> -->
 								<!-- <li><a href="faq.html">FAQ</a></li> -->
 								<!-- <li><a href="causes.html">Visi</a></li> -->
 								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
@@ -119,9 +119,9 @@
 		<div class="row">
 			<div class="col-lg-8 content-center">
 				<div class="xs-video-popup-wraper">
-					<img src="assets/images/video_img.jpg" alt="">
+					<img src="assets/images/kopasude_profile_image.png" alt="">
 					<div class="xs-video-popup-content">
-						<a href="https://www.youtube.com/watch?v=Tb1HsAGy-ls" class="xs-video-popup xs-round-btn">
+							<a href="assets/videos/kopasude_profile.mp4" class="xs-video-popup xs-round-btn">
 							<i class="fa fa-play"></i>
 						</a>
 					</div><!-- .xs-video-popup-content end -->
@@ -133,192 +133,82 @@
 
 	<!-- video popup section section -->
 	<section class="xs-content-section-padding">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-11 content-center">
-				<div class="xs-heading xs-mb-100 text-center">
-					<h2 class="xs-mb-0 xs-title">We are an Globian non-profit organization that <span class="color-green">supports</span> good causes and positive change all over the world.</h2>
-				</div>
-			</div>
-		</div><!-- .row end -->
-		<div class="row">
-			<div class="col-md-4">
-				<div class="xs-about-feature">
-					<h3>Our Mission</h3>
-					<p class="lead">The CharityPress community was named a “Top 25 Best Global Philanthropist” by Barron’s. We beat Oprah. And, Mashable named CharityPress something like that.</p>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="xs-about-feature">
-					<h3>Our Vission</h3>
-					<p class="lead">The Globian Fund for Charities seeks positive change around the world through support of non-profit organizations dedicated to social, cultural.</p>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="xs-about-feature">
-					<h3>Our Values</h3>
-					<ul class="xs-unorder-list play green-icon">
-						<li>Accountability</li>
-						<li>Reliability</li>
-						<li>Cost-effectiveness</li>
-						<li>Personal service</li>
-					</ul>
-				</div>
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</section>	<!-- End video popup section section -->
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-11 content-center">
+						<div class="xs-heading xs-mb-100 text-center">
+							<h2 class="xs-mb-0 xs-title">A community which
+									determined to build awareness for <span class="color-green">children, society and environment</span>
+									around Deli river.</h2>
+
+						</div>
+					</div>
+				</div><!-- .row end -->
+				<div class="row">
+					<div class="col-md-4">
+						<div class="xs-about-feature">
+							<h3>Visi</h3>
+							<p class="lead">SAVE THE CHILDREN AND DELI RIVER.</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="xs-about-feature">
+							<h3>Misi</h3>
+							<p class="lead">Realize the dreams and building the mindset and morality of the children in the riverbanks area.<br>
+									Restore the function of the Deli River as a tourism icon for the city of Medan.<br>
+									Maintain the Conservation of Urban Forest in the Deli River Basin.<br>
+									Building Creative Economy among the communities of Deli Riverbank.</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="xs-about-feature">
+							<h3>Kinerja Kopasude</h3>
+							<ul class="xs-unorder-list play green-icon">
+								<li>Socialization, Preservation, and Application of Environmental Care for the Deli River Basin.</li>
+								<li>Teaching, Assistance, and Coaching (Children and Society).</li>
+								<li>Community Creative Economy Based Business Development.</li>
+							</ul>
+						</div>
+					</div>
+				</div><!-- .row end -->
+			</div><!-- .container end -->
+		</section>	<!-- End video popup section section -->
 
 	<!-- funfacts section -->
 	<div class="xs-funfact-section xs-content-section-padding waypoint-tigger parallax-window" style="background-image: url('assets/images/backgrounds/parallax_1.jpg')">
-	<div class="container">
-		<div class="row col-lg-10 xs-heading mx-auto">
-			<h2 class="xs-title color-white small">Our agency has been present for over 30 years. We make the best for all our children.</h2>
-		</div>
-		<div class="row">
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-donation_2"></i>
-					<span class="number-percentage-count number-percentage" data-value="10" data-animation-duration="3500">0</span><span>M</span>
-					<small>Causes</small>
-				</div>
+		<div class="container">
+			
+			<div class="row col-lg-10 xs-heading mx-auto">
+				<h2 class="xs-title color-white small">Established on March 22, 2015, 
+					Kopasude focuses on working for children and Deli river environment.</h2>
 			</div>
+			<div class="row">
 			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-group"></i>
-					<span class="number-percentage-count number-percentage" data-value="25" data-animation-duration="3500">0</span><span>k</span>
-					<small>Valunteer</small>
-				</div>
+					
+					<div class="xs-single-funFact color-white">
+						<i class="icon-children"></i>
+						<span class="number-percentage-count number-percentage" data-value="55" data-animation-duration="2000">0</span>
+						<small>Children</small>
+					</div>
 			</div>
 			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-children"></i>
-					<span class="number-percentage-count number-percentage" data-value="30" data-animation-duration="3500">0</span><span>k</span>
-					<small>Childrens</small>
-				</div>
+					<div class="xs-single-funFact color-white">
+						<i class="fa fa-home"></i>
+						<span class="number-percentage-count number-percentage" data-value="3" data-animation-duration="1000">0</span>
+						<small>Villages</small>
+					</div>
 			</div>
 			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-planet-earth"></i>
-					<span class="number-percentage-count number-percentage" data-value="14" data-animation-duration="3500">0</span><span>k</span>
-					<small>Countrys</small>
-				</div>
+					<div class="xs-single-funFact color-white">
+						<i class="fa fa-tree"></i>
+						<span class="number-percentage-count number-percentage" data-value="150" data-animation-duration="2000">0</span>
+						<small>Trees</small>
+					</div>
 			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-	<div class="xs-black-overlay"></div>
-</div>	<!-- End funfacts section -->
-
-	<!-- what we do section -->
-	<section class="xs-section-padding">
-	<div class="container">
-		<div class="xs-heading row xs-mb-60">
-			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">What We Do</h2>
-				<span class="xs-separetor dashed"></span>
-				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
-			</div><!-- .xs-heading-title END -->
-		</div><!-- .row end -->
-		<div class="row">
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-water color-orange"></span>
-					<h5>Pure Water <br>For Poor People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-groceries color-red"></span>
-					<h5>Healty Food <br>For Poor People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-heartbeat color-purple"></span>
-					<h5>Medical <br>Facilities for People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-open-book color-green"></span>
-					<h5>Pure Education <br>For Every Children</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</section>	<!-- End what we do section -->
-
-	<!-- team section -->
-	<section class="xs-section-padding bg-gray">
-	<div class="container">
-		<div class="xs-heading row xs-mb-60">
-			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Our Team</h2>
-				<span class="xs-separetor dashed"></span>
-				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
-			</div><!-- .xs-heading-title END -->
-		</div><!-- .row end -->
-		<div class="row xs-mb-60">
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_1.png" alt="">
-					<div class="xs-team-content">
-						<h4>William Khanna</h4>
-						<small>CEO & Founder</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-red" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_2.png" alt="">
-					<div class="xs-team-content">
-						<h4>Mr. Aladin</h4>
-						<small>General Manager</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-purple" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_3.png" alt="">
-					<div class="xs-team-content">
-						<h4>Zummon Khan</h4>
-						<small>Volunteer</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-blue" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
-					<img src="assets/images/team/team_4.png" alt="">
-					<div class="xs-team-content">
-						<h4>Harista Pro</h4>
-						<small>Volunteer</small>
-						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
-							<path class="fill-orange" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
-						</svg>
-					</div><!-- .xs-team-content END -->
-				</div><!-- .xs-single-team END -->
-			</div>
-		</div><!-- .row END -->
-		<div class="text-center">
-			<a href="#" class="btn btn-success">
-				join with us
-			</a>
-		</div>
-	</div><!-- .container end -->
-</section>	<!-- End team section -->
+			</div><!-- .row end -->
+		</div><!-- .container end -->
+		<div class="xs-black-overlay"></div>
+	</div>	<!-- End funfacts section -->
 
 </main>
 
