--- a/volunteer-en.html
+++ b/volunteer-en.html
@@ -71,7 +71,7 @@
 							<ul class="nav-dropdown">
 								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
 								<li><a href="about-en.html">About Us</a></li> 
-								<li><a href="volunteer-en.html">Volunteer</a></li>
+								<!--<li><a href="volunteer-en.html">Volunteer</a></li> -->
 								<!-- <li><a href="faq.html">FAQ</a></li> -->
 								<!-- <li><a href="causes.html">Visi</a></li> -->
 								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
