--- a/donate-now.html
+++ b/donate-now.html
@@ -42,7 +42,12 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-
+	<div id="preloader">
+		<div class="spinner">
+			<div class="double-bounce1"></div>
+			<div class="double-bounce2"></div>
+		</div>
+	</div><!-- #preloader -->
 <!-- header section -->
 <header class="xs-header header-transparent">
 		<div class="container">
