fix typo in index-en

--- a/index-en.html
+++ b/index-en.html
@@ -363,7 +363,7 @@
 						<h2 class="xs-mb-0 xs-title">Help and <span class="color-green">Support</span></h2>
 					</div>
 					<p>Kopasude received support from the North Sumatra Provincial Government, Medan City Government, Volunteers and many other parties.
-							also, the communities around the Deli River whom very cooperative and helpful
+							also, the communities around the Deli River whom very cooperative and helpful in
 							the realization of our programs.</p>
 				</div>
 			</div>
