--- a/blog-en.html
+++ b/blog-en.html
@@ -178,7 +178,7 @@
 					<div class="col-lg-2 col-md-6 footer-widget">
 						<h3 class="widget-title">About Us</h3>
 						<ul class="xs-footer-list">
-							<li><a href="about-en.html">Team</a></li>
+							<li><a href="about-en.html">Vision and Mission</a></li>
 							<li><a href="blog-en.html">Blog</a></li>
 							<li><a href="contact-en.html">Contact</a></li>
 						</ul>
