--- a/donate-now.html
+++ b/donate-now.html
@@ -155,7 +155,7 @@
 					<div class="col-lg-2 col-md-6 footer-widget">
 						<h3 class="widget-title">Tentang Kami</h3>
 						<ul class="xs-footer-list">
-							<li><a href="about.html">Team</a></li>
+							<li><a href="about.html">Visi dan Misi</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="contact.html">Kontak</a></li>
 						</ul>
