--- a/about-en.html
+++ b/about-en.html
@@ -147,13 +147,13 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="xs-about-feature">
-							<h3>Visi</h3>
+							<h3>Vision</h3>
 							<p class="lead">SAVE THE CHILDREN AND DELI RIVER.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="xs-about-feature">
-							<h3>Misi</h3>
+							<h3>Mission</h3>
 							<p class="lead">Realize the dreams and building the mindset and morality of the children in the riverbanks area.<br>
 									Restore the function of the Deli River as a tourism icon for the city of Medan.<br>
 									Maintain the Conservation of Urban Forest in the Deli River Basin.<br>
@@ -162,7 +162,7 @@
 					</div>
 					<div class="col-md-4">
 						<div class="xs-about-feature">
-							<h3>Kinerja Kopasude</h3>
+							<h3>Goals</h3>
 							<ul class="xs-unorder-list play green-icon">
 								<li>Socialization, Preservation, and Application of Environmental Care for the Deli River Basin.</li>
 								<li>Teaching, Assistance, and Coaching (Children and Society).</li>
